--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learn-graphql",
   "version": "1.0.0",
   "description": "Pedagogical project for Efrei Paris to learn GraphQL.",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
